--- a/VisualPinball.Unity/VisualPinball.Unity.Editor/AssetBrowser/AssetStructure/AssetInspector.uxml
+++ b/VisualPinball.Unity/VisualPinball.Unity.Editor/AssetBrowser/AssetStructure/AssetInspector.uxml
@@ -38,7 +38,7 @@
 	<!-- Geometry -->
 	<ui:Foldout text="Geometry">
 		<uie:PropertyField binding-path="Scale" label="Scale Transform" />
-		<uivpe:PresetDropdownElement binding-path="ThumbCameraPreset" label="Thumbnail Camera" default-preset="Default" preset-path="Packages/org.visualpinball.engine.unity/VisualPinball.Unity/Assets/Presets/Asset Thumbcam" />
+		<uivpe:PresetDropdownElement name="thumb-camera-preset" binding-path="ThumbCameraPreset" label="Thumbnail Camera" preset-path="Packages/org.visualpinball.engine.unity/VisualPinball.Unity/Assets/Presets/Asset Thumbcam" />
 	</ui:Foldout>
 
 </ui:UXML>
