--- a/VisualPinball.Unity/VisualPinball.Unity.Editor/AssetBrowser/AssetStructure/AssetDetails_Body.uxml
+++ b/VisualPinball.Unity/VisualPinball.Unity.Editor/AssetBrowser/AssetStructure/AssetDetails_Body.uxml
@@ -17,8 +17,10 @@
 
 	<!-- Geometry -->
 	<ui:Foldout text="Geometry">
-		<uie:PropertyField binding-path="Scale" label="Scale Transform" />
-		<uivpe:PresetDropdownElement name="thumb-camera-preset" binding-path="ThumbCameraPreset" label="Thumbnail Camera" preset-path="Packages/org.visualpinball.engine.unity/VisualPinball.Unity/Assets/Presets/Asset Thumbcam" />
+		<ui:VisualElement class="left-indent">
+			<uie:PropertyField binding-path="Scale" label="Scale Transform" />
+			<uivpe:PresetDropdownElement name="thumb-camera-preset" binding-path="ThumbCameraPreset" label="Thumbnail Camera" preset-path="Packages/org.visualpinball.engine.unity/VisualPinball.Unity/Assets/Presets/Asset Thumbcam" />
+		</ui:VisualElement>
 	</ui:Foldout>
 
 </ui:UXML>
