--- a/VisualPinball.Unity/VisualPinball.Unity.Editor/AssetBrowser/AssetStructure/AssetAttributePropertyDrawer.uxml
+++ b/VisualPinball.Unity/VisualPinball.Unity.Editor/AssetBrowser/AssetStructure/AssetAttributePropertyDrawer.uxml
@@ -1,4 +1,4 @@
 ﻿<ui:UXML xmlns:ui="UnityEngine.UIElements" xmlns:uie="UnityEditor.UIElements" xmlns:uivpe="VisualPinball.Unity.Editor" editor-extension-mode="True">
 	<uivpe:SuggestingTextField name="key-field" label="Name" binding-path="Key" multivalue="false" tooltip="Name of the attribute. Auto-completes with existing attributes." />
-	<uivpe:SuggestingTextField name="value-field" label="Value(s)" binding-path="Value" multivalue="true" tootip="You can put multiple, comma-separated values in here." />
+	<uivpe:SuggestingTextField name="value-field" label="Value(s)" binding-path="Value" multivalue="true" tooltip="You can put multiple, comma-separated values in here." />
 </ui:UXML>
