--- a/VisualPinball.Unity/VisualPinball.Unity.Editor/AssetBrowser/AssetStructure/AssetDetails_Body_ReadOnly.uxml
+++ b/VisualPinball.Unity/VisualPinball.Unity.Editor/AssetBrowser/AssetStructure/AssetDetails_Body_ReadOnly.uxml
@@ -1,8 +1,7 @@
 <ui:UXML xmlns:ui="UnityEngine.UIElements" xmlns:uie="UnityEditor.UIElements" xmlns:uivpe="VisualPinball.Unity.Editor" editor-extension-mode="True">
 
-	<ui:Foldout name="materials-foldout" text="Material Variations">
-		<ui:ScrollView name="materials-container" mode="Horizontal"/>
-	</ui:Foldout>
+	<!-- Material Variations -->
+	<uivpe:AssetMaterialVariationsElement name="material-variations" text="Material Variations"/>
 
 	<!-- Description -->
 	<ui:Label name="description" binding-path="Description" class="bottom-space"/>
