--- a/VisualPinball.Unity/VisualPinball.Unity.Editor/AssetBrowser/AssetStructure/AssetDetails_Header.uxml
+++ b/VisualPinball.Unity/VisualPinball.Unity.Editor/AssetBrowser/AssetStructure/AssetDetails_Header.uxml
@@ -20,4 +20,7 @@
 	<!-- Interactive Preview -->
 	<uivpe:PreviewEditorElement name="preview"/>
 
+	<!-- Description -->
+	<ui:Label name="description" class="bottom-space text-wrap mx-3"/>
+
 </ui:UXML>
