--- a/VisualPinball.Unity/VisualPinball.Unity.Editor/AssetBrowser/AssetStructure/AssetDetails_Body_ReadOnly.uxml
+++ b/VisualPinball.Unity/VisualPinball.Unity.Editor/AssetBrowser/AssetStructure/AssetDetails_Body_ReadOnly.uxml
@@ -26,4 +26,10 @@
 		<ui:VisualElement name="links-container" class="left-indent"/>
 	</ui:Foldout>
 
+	<!-- Quality -->
+	<ui:Foldout text="Quality" name="quality-foldout">
+		<ui:VisualElement name="quality-container" class="left-indent"/>
+	</ui:Foldout>
+
+
 </ui:UXML>
